<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.depaul.csc472.nicolay_m_finalproject.FileActivity">

    <TextView
        android:text="@string/file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="64dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/noFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectedFile"
        android:layout_marginStart="88dp"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="88dp"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.39"
        android:textSize="18sp" />

    <Button
        android:text="@string/browse"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:id="@+id/fButtonBrowse"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/fButtonBrowse"
        app:layout_constraintLeft_toLeftOf="@+id/fButtonBrowse"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <EditText
        android:layout_width="198dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:text="@string/enterLabel"
        android:ems="10"
        android:id="@+id/editLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:nextFocusUp="@id/editLabel"
        android:nextFocusLeft="@id/editLabel"
        android:selectAllOnFocus="true"/>

    <Button
        android:text="@string/cancel"
        android:layout_height="58dp"
        android:id="@+id/fButtonCancel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.02"
        android:layout_width="162dp"
        android:textSize="16sp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@+id/editLabel" />

    <Button
        android:text="@string/save"
        android:layout_height="58dp"
        android:id="@+id/fButtonSave"
        app:layout_constraintTop_toTopOf="@+id/fButtonCancel"
        app:layout_constraintBottom_toBottomOf="@+id/fButtonCancel"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_width="162dp"
        android:textSize="16sp" />

</android.support.constraint.ConstraintLayout>
