<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.depaul.csc472.nicolay_m_finalproject.MenuActivity">

    <TextView
        android:text="@string/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textSize="36sp" />

    <Button
        android:text="@string/soundboard"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:id="@+id/mButtonSoundBoard"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:textSize="18sp" />

    <Button
        android:text="@string/config"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:id="@+id/mButtonConfig"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/mButtonFile"
        app:layout_constraintLeft_toLeftOf="@+id/mButtonFile"
        app:layout_constraintRight_toRightOf="@+id/mButtonFile"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="18sp" />

    <Button
        android:text="@string/fileUpload"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:id="@+id/mButtonFile"
        app:layout_constraintLeft_toLeftOf="@+id/mButtonSoundBoard"
        app:layout_constraintRight_toRightOf="@+id/mButtonSoundBoard"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/mButtonSoundBoard"
        app:layout_constraintHorizontal_bias="1.0"
        android:textSize="18sp" />
</android.support.constraint.ConstraintLayout>
